Style: Increase MathJax font size for readability

--- a/style.css
+++ b/style.css
@@ -130,4 +130,5 @@ mjx-container,
 mjx-container * {
     font-family: 'Courier New', Courier, monospace !important;
     font-style: normal !important;
+    font-size: 1.1em !important;
 }
