Fix typos and update email

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,4 +15,5 @@ layout: default
 
 <footer>
     <a href="https://linkedin.com/in/jamie-d-arcy-a23177277/">LinkedIn</a>
+    <a href="mailto:jamiedarcy06+githubpages@gmail.com">Email</a>
 </footer>
