--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
     <div class="container">
         {{ content }}
     </div>
+    <script data-goatcounter="https://jamiedarcy.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 
 </html>
