Add social links to posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,3 +11,8 @@ layout: default
 <article>
     {{ content }}
 </article>
+
+<footer>
+    <a href="https://linkedin.com/in/jamie-d-arcy-a23177277/">LinkedIn</a>
+    <a href="mailto:jamiedarcy06+githubpages@gmail.com">Email</a>
+</footer>
