Configure external links to open in new tab

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,6 @@ layout: default
 </main>
 
 <footer>
-    <a href="https://linkedin.com/in/jamie-d-arcy-a23177277/">LinkedIn</a>
-    <a href="mailto:jamiedarcy06+githubpages@gmail.com">Email</a>
+    <a href="https://linkedin.com/in/jamie-d-arcy-a23177277/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+    <a href="mailto:jamiedarcy06+githubpages@gmail.com" target="_blank" rel="noopener noreferrer">Email</a>
 </footer>
