--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,17 @@
     <div class="container">
         {{ content }}
     </div>
-    <script data-goatcounter="https://jamiedarcy.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+    <script data-goatcounter="https://jamiedarcy.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            document.querySelectorAll('a').forEach(function (link) {
+                if (link.hostname !== window.location.hostname && link.hostname !== '') {
+                    link.target = '_blank';
+                    link.rel = 'noopener noreferrer';
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
