--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,15 @@
     <div class="container">
         {{ content }}
     </div>
+    <!-- Microsoft Clarity -->
+    <script type="text/javascript">
+        (function (c, l, a, r, i, t, y) {
+            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+        })(window, document, "clarity", "script", "v6xs5tnbj5");
+    </script>
+    <!-- GoatCounter -->
     <script data-goatcounter="https://jamiedarcy.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
